src/objects/Household__c.object
<CustomObject>
    <description>Physical mailing address for grouping contacts</description>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set the Household name and other fields using anonymous information.</description>
        <inlineHelpText>Used to set the Household name and other fields using anonymous information.</inlineHelpText>
        <label>Always Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Average amount of won Opportunities related to this Household by a related Contact with primary Opportunity Contact Role.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year for this Household via Contacts with primary Opportunity Contact Role.  See also Best Gift Year.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Gift_Year__c</fullName>
        <inlineHelpText>The year in which the largest total amount of won Opportunities related to this Household via Contacts with primary Opportunity Contact Role occurred.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The earliest Close Date of a won Opportunity related to this Household via Contacts with primary Contact Role.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formal_Greeting__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <description>Formula: Concatenation of other Mailing fields for this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</description>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingCity__c &amp; IF(LEN(MailingCity__c)  &gt; 0, &quot;, &quot;, &quot;&quot;) &amp; MailingState__c &amp; &quot;  &quot; &amp;  MailingPostalCode__c 
&amp; if (LEN(MailingCountry__c)&gt;0,BR()&amp;MailingCountry__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Concatenation of other Mailing fields for this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdEmail__c</fullName>
        <description>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</inlineHelpText>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HouseholdPhone__c</fullName>
        <description>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be edited in Household, but does not update Contact.</inlineHelpText>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Informal_Greeting__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Uses fields of non-excluded, ordered related Contacts.  Generated automatically.</inlineHelpText>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The largest won Opportunity amount for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Most recent Close Date of a won Opportunity for this Household via related Contacts with primary Contact Role.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The most recent won Membership Opportunity (Record Type) amount for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The most recent Close Date of a won Membership Opportunity for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The Membership Level of the most recent won Membership Opportunity for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The Origin (new, renew...) of the most recent won Membership Opportunity for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The most recent won Opportunity amount for this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>Set by the original Contact which created this Household. Can be updated in Household Edit page but does not update Contact unless &quot;Copy Household Address to Contacts&quot; button is pushed.</inlineHelpText>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The Membership End Date of the most recent won Membership Opportunity for his Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipJoinDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The earliest Membership Join Date of the oldest Membership Opportunity (Close Date, Record Type) for his Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Span__c</fullName>
        <description>Formula: The number of years for which this Household has had a Member.</description>
        <formula>year(MembershipEndDate__c ) - year(MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The number of years for which this Household has had a Member.</inlineHelpText>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <description>Grace period defaults to 30 days. This can be adjusted in the Households Settings tab.</description>
        <formula>if ( MembershipEndDate__c  &lt;today(), if (MembershipEndDate__c  &gt; ( TODAY() - 
IF(NOT(ISNULL($Setup.Households_Settings__c.Membership_Grace_Period__c)), $Setup.Households_Settings__c.Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Current, expired, or grace period.  Default grace period set in Household Settings.</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of gifts related to this Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Total Gifts Two Years Ago on Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Household, closed in the last number of days defined in Household Settings, related by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Total Gifts Last Year on Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Total Gifts This Year on Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The number of won Opportunities with Close Date in the last 2 years related to this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The number of won Opportunities with Close Date in the last N days (Household Settings) related to this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The number of won Opportunities with Close Date in the last year related to this Household via related Contacts with primary Contact Role.</inlineHelpText>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The number of won Opportunities with Close Date this year related to this Household via related Contacts with primary Opportunity Contact Role.</inlineHelpText>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SYSTEM_CUSTOM_NAMING__c</fullName>
        <description>Hidden system field: do not change. Updated by automatic processes.</description>
        <inlineHelpText>Name, Formal Greeting, or Informal Greeting</inlineHelpText>
        <label>_SYSTEM: CUSTOM NAMING</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal_Greeting__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal_Greeting__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The smallest amount of a won Opportunity related to this Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The sum of won Opportunity Amounts related to this Household by Contact and primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Household</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Formal_Greeting__c</columns>
        <columns>Informal_Greeting__c</columns>
        <columns>SYSTEM_CUSTOM_NAMING__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>